<resources>

    <!--
    <string name="app_name">FindMyPlace</string>
    <string name="scheme_url_prefix">findmyplace</string>
    <string name="map_error">"Sorry! unable to create maps"</string>
    <string name="gps_disable">"Your GPS seems to be disabled, do you want to enable it?"</string>
    <string name="ok_button">"OK"</string>
    <string name="cancel_button">"Cancel"</string>
    <string name="save_location">"Save Location"</string>
    <string name="get_directions">"Get Directions"</string>
    <string name="address_text">"Address: "</string>
    <string name="location_name">"Enter name "</string>
    <string name="address_image">"Take a picture"</string>
    <string name="location_item_description_title">"Description:"</string>
    -->


    <!-- App strings -->
    <string name="app_name">זכור אותי</string>
    <string name="scheme_url_prefix">findmyplace</string>
    <string name="map_error">"מצטערים! ארעה שגיאה"</string>
    <string name="gps_disable">"הפעל גי פי אס"</string>
    <string name="ok_button">"אישור"</string>
    <string name="cancel_button">"ביטול"</string>
     <string name="skip_button">"דלג"</string>
    <string name="save_location">"שמור מיקום"</string>
    <string name="address_text">"כתובת: "</string>
    <string name="get_directions">"טען מסלול"</string>
    <string name="location_name">"כתוב משהו..."</string>
    <string name="address_image">"הוסף תמונה"</string>
    <string name="location_item_description_title">"תיאור:"</string>
    
    <string name="location_item_remove_location_success">"מיקום הוסר בהצלחה"</string>
    <string name="location_item_remove_location_unsuccess">ארעה שגיאה, אנה נסה שנית"</string>
    <string name="location_item_added_location_success">"מיקום נוסף בהצלחה"</string>
    <string name="location_item_added_location_unsuccess">ארעה שגיאה, אנה נסה שנית"</string>
    
    
     <string name="fb_share_app_description">האפליקציה שתחזיר אותך לכל מקום שסימנת ...</string>
    
    
     <string name="share_location_message">"היי אני משתמש באפליקציית FindMe \n אני נמצא ב "</string>
     <string name="find_me_scheme">"http://findmyplace://navigate?location="</string>

     <string name="debug_mail_address">eladkariti@gmail.com</string>
    
     <string name="google_play_link">https://play.google.com/store/apps/details?id=com.arohi.freewifiinternetar</string>
  	<string name="app_id">"743843289000888"</string>
</resources>