<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e3e3e3"
    android:padding="15dp"
    android:layout_margin="50dp" >

    <LinearLayout
        android:id="@+id/address_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_text" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:text="@string/address_text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_name_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/address_container"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_text" />

        <EditText
            android:id="@+id/locatio_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/location_name"
            android:paddingLeft="5dp"
            android:paddingRight="5dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location_image_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_name_container"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_image" />

        <ImageView
            android:id="@+id/location_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/location_image_container"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/ok_button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="@string/ok_button" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:text="@string/cancel_button" />
    </LinearLayout>

</RelativeLayout>